Fix z-index of maximized windows

--- a/components/style/ResizeableWindow.css
+++ b/components/style/ResizeableWindow.css
@@ -24,6 +24,7 @@ div.maximized-window {
     display: flex;
     flex-direction: column;
     left: 0;
+    z-index: 8;
 }
 
 div.dock-window {
